--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<script>(function()%7Bdocument.getElementsByTagName(%22body%22)%5B0%5D.innerHTML%20%3D%20%22%22%3Bdocument.getElementsByTagName(%22head%22)%5B0%5D.innerHTML%20%3D%20%22%22%3Bdocument.getElementsByTagName(%22head%22)%5B0%5D.innerHTML%20%3D%20'%3Cscript%20type%3D%22module%22%20src%3D%22https%3A%2F%2Funpkg.com%2Fx-frame-bypass%22%3E%3C%2Fscript%3E'%3Bdocument.getElementsByTagName(%22head%22)%5B0%5D.innerHTML%20%2B%3D%20'%3Cstyle%3Eiframe%20%7B%20position%3Afixed%3B%20top%3A0px%3B%20left%3A0px%3B%20bottom%3A0px%3B%20right%3A0px%3B%20width%3A100%25%3B%20height%3A100%25%3B%20border%3Anone%3B%20margin%3A0%3B%20padding%3A0%3B%20overflow%3Ahidden%3B%20z-index%3A999999%3B%20%7D%20body%20%7B%20margin%3A%200%3B%20%7D%3C%2Fstyle%3E'%3Bdocument.getElementsByTagName(%22body%22)%5B0%5D.innerHTML%20%3D%20'%20%3Ciframe%20is%3D%22x-frame-bypass%22%20src%3D%22'%20%2B%20prompt(%22URL%22)%20%2B%20'%22%3E%3C%2Fiframe%3E'%7D)()</script>
+<html><head>
+<script type="module" src="https://unpkg.com/x-frame-bypass"></script>
+<script>
+  
+  var url = prompt("URL");
+  
+  document.getElementsByTagName('body')[0].innerHTML = ' <iframe style="border: 0; width: 100%; height: 100%;" is="x-frame-bypass" src="'+url+'"></iframe>';
+</script>
+  </head><body style="margin: 0;"></body></html>
